<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditEvent">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/eventDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/eventDate"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/eventTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/eventTime"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/changeTime"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change time and save"
        android:textColor= "@color/blue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        />

<!--    <Button-->
<!--        android:id="@+id/saveButton"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Save"-->
<!--        android:textColor= "@color/blue"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="20sp"-->
<!--        android:onClick="saveEventAction"-->
<!--        android:layout_gravity="center"-->
<!--        />-->

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/delete"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textColor= "@color/red"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:onClick="deleteEvent"
        />

</LinearLayout>